Uprava formalit v pyccregu (make a REAME soubory). Vetev 1.1 je ponechana svemu osudu.
git-svn-id: file:///data/svn/enum/pyccReg/trunk@1453 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
 2006-09-27 Jan Kryl <jan.kryl@nic.cz>
 
 	* Zalozeni tohoto ChangeLogu pro lepsi prehled o provedenych
-	zmenach verze od verze.
+	zmenach verze od verze. ChangeLog je spolecny pro cely pyccReg,
+	tj. obsahuje zmeny serveru i v klientech.
 
 	* Pridani README, README.genzone souboru do serverove casti, ktere
 	aspon v hrubych rysech objasnuji cinnost a strukturu projektu.
