--- a/clients/mailer/README
+++ b/clients/mailer/README
@@ -1,3 +1,8 @@
 
-Simple client to Mailer daemon tests basic functionality of the daemon.
+Simple clients for testing basic functionality of Mailer daemon.
 It is ment to be used for debugging and monitoring.
+
+mailer_client.py        can be used for testing of email submission.
+mailer_admin_client.py  can be used for testing of admin interface of mailer.
+
+Use --help parameter to get more information about usage.
