--- a/clients/techcheck/README
+++ b/clients/techcheck/README
@@ -2,6 +2,6 @@ This is a README file for client side of technical checks. Through this program
 one can invoke technical check of a given domain. The client displays the
 result of technical check. TO run the test for the domain 'foo.cz' type:
 
-  $ python ./techcheck_client --domain foo.cz
+  $ python ./techcheck_client.py --domain foo.cz
 
 This assumes that nameservice runs on localhost.
