--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,10 @@
 	* Nastaveni kodovani stringu v ORBu na UTF-8 v serveru a ve vsech
 	klientech.
 
+	* Odstraneni konfiguracniho souboru pyfred_modules.conf. Nahrazuje ho
+	nadale konfiguracni soubor pyfred.conf, kde v sekci general, direktive
+	modules lze zadat nazvy modulu k naloadovani.
+
 2006-10-20 Jan Kryl (version 1.2.1)
 
 	* Prizpusobeni vystupu klienta generatoru zony tak, aby vyhovoval
