--- a/server/README
+++ b/server/README
@@ -29,29 +29,27 @@ In alphabetical order:
     filemanager.py - module for storage of file attachments
     genzone.py     - module for zone generation
     mailer.py      - module for email notifications
-    pyfred_modules.conf - tells which modules should be loaded upon
-                     server startup
+    pyfred.conf    - main configuration file of pyfred
     pyfred.py      - the main server (starts modules)
     pyfred.sh      - start/stop script for pyfred (not usable)
-    whois.py       - module implementing whois server
+    techcheck.py   - module realizing technical checks on nssets
+    techchecs      - subdirectory with scripts used for tech checks
+    utils          - misc insignificant utilities
+    whois.py       - module implementing whois server (does not work)
 
 
 3. Configuration
 
 The server looks for pyfred.conf in current, /etc, /usr/local/etc directories
-in this order. There are provided defaults for all configuration directives
-if configuration file is not found. Configuration file has sections. One
-general for pyfred.py and several others for individual modules.
-
-Other configuration file is pyfred_modules.conf looked
-up in the same directories as pyfred.conf. This file configures modules
-which should be loaded upon server startup.
+in this order. Configuration file has sections. One general for pyfred.py and
+several others for individual modules.
 
 
 4. Dependencies
 
 General dependency is omniORB module for python and pgdb module for postgresql.
-Additionally mailer module depends on clearsilver python module.
+Additionally mailer module depends on clearsilver python module, techcheck
+module on fpdns perl script.
 
 
 5. Execution and Instalation
