Update changelogu ve vsech aktualnich vetvich pyfredu
git-svn-id: file:///data/svn/enum/pyfred/trunk@2444 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -33,8 +33,13 @@
 
 	* Novy modul techcheck na vykonovani technickych kontrol nssetu.
 	S tim souvisi pridani sady skriptu realizujicich jednotlive technicke
-	kontroly v adresari techchecks. Skript na kontrolu heterogenity
-	DNS serveru vyzaduje instalaci fpdns perloveho skriptu.
+	kontroly v adresari techchecks.
+	
+	* Skript na kontrolu heterogenity DNS serveru vyzaduje instalaci
+	fpdns perloveho skriptu.
+
+	* Skript na kontrolu autonomniho systemu DNS serveru vyzaduje whois
+	binarku.
 
 2006-10-20 Jan Kryl (version 1.2.1)
 
