--- a/server/README
+++ b/server/README
@@ -25,15 +25,15 @@ and cannot be used in production.
 2. Description of files
 
 In alphabetical order:
-    fred_util.py   - utility functions shared accross the modules
     filemanager.py - module for storage of file attachments
     genzone.py     - module for zone generation
     mailer.py      - module for email notifications
     pyfred.conf    - main configuration file of pyfred
     pyfred.py      - the main server (starts modules)
-    pyfred.sh      - start/stop script for pyfred (not usable)
+    pyfredctl.py   - start/stop script for pyfred
+    pyfred_util.py - utility functions shared accross the modules
     techcheck.py   - module realizing technical checks on nssets
-    techchecs      - subdirectory with scripts used for tech checks
+    techchecks     - subdirectory with scripts used for tech checks
     utils          - misc insignificant utilities
     whois.py       - module implementing whois server (does not work)
 
@@ -41,15 +41,18 @@ In alphabetical order:
 3. Configuration
 
 The server looks for pyfred.conf in current, /etc, /usr/local/etc directories
-in this order. Configuration file has sections. One general for pyfred.py and
-several others for individual modules.
+in this order. You can explicitly set configuration file on command line as
+parameter. Configuration file has sections. One general for pyfred.py and
+several others for individual modules. Configuration file contains comments,
+which briefly explain meaning of directives.
 
 
 4. Dependencies
 
 General dependency is omniORB module for python and pgdb module for postgresql.
-Additionally mailer module depends on clearsilver python module, techcheck
-module on fpdns perl script.
+Additionally mailer module depends on clearsilver library, sendmail program
+and m2crypto (openssl) library. Techcheck module depends on fpdns perl script,
+python's dns library and whois client.
 
 
 5. Execution and Instalation
@@ -75,3 +78,6 @@ where the Makefile resides. Then type just (as root):
 This will install all modules and all clients available in pyfred.
 For finer control over what will be installed and what not, are
 provided special makefile targets. See Makefile's content.
+
+Alternatively you can use start/stop/status script pyfredctl.py, which
+is renamed to pyfredctl after installation.
