Oprava chyby nekontrolovani uspechu vytvoreni pid souboru. Mazani corba referenci pri ukonceni. Oprava v setup.py na kontrolu pythnu.
git-svn-id: file:///data/svn/enum/pyfred/trunk@3298 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2007-06-13 Jan Kryl (version 1.6.1)
+
+	* When pyfred_server terminates, references registered by corba
+	nameservice when pyfred_server is started are deleted.
+
+	* Bug in check of python version in setup.py was fixed.
+
+	* Better handling of unexpected exceptions in pyfred_server.
+
 2007-06-11 Jan Kryl (version 1.6.0)
 
 	* Genzone client uses safe method for creating temporary files.
