Oprava chybneho generovani GLUE zaznamu.
git-svn-id: file:///data/svn/enum/pyfred/trunk@3300 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,6 +11,9 @@
 	zones specified on cmd line, the new 'zones' directive from 'general'
 	section is taken into account.
 
+	* Critical error in genzone was fixed. The GLUE records were not
+	properly generated.
+
 2007-06-11 Jan Kryl (version 1.6.0)
 
 	* Genzone client uses safe method for creating temporary files.
