Oprava zavazneho bugu v generatoru zonu, ktery generoval GLUE kdyz nemel.
git-svn-id: file:///data/svn/enum/pyfred/trunk@3306 b60c293d-5e0d-0410-87b2-fb9704ccd4b5

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2007-06-14 Jan Kryl (version 1.6.2)
+
+	* Bug in zone generator was fixed. GLUE records were generated
+	if the nameserver came from the same zone instead of domain. This
+	is wrong behaviour.
+
 2007-06-13 Jan Kryl (version 1.6.1)
 
 	* When pyfred_server terminates, references registered by corba
